fix Sections.jsx (hidden-mobile) and add scroll bar for slider on mobile

--- a/src/components/CategoryCard/CategoryCard.scss
+++ b/src/components/CategoryCard/CategoryCard.scss
@@ -1,22 +1,26 @@
 .category-card {
-  --categoryCardImgOpacity: 1;
+  --categoryCardImagesGradientOpacity: 1;
 
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
-  padding: fluid(30,20);
+  padding: fluid(30, 20);
   background-color: var(--color-black-10);
   border: var(--border);
   border-radius: var(--border-radius-l);
 
-  @include laptop{
+  @include laptop {
     border-radius: var(--border-radius-m);
   }
 
   @include hover {
-    --categoryCardImgOpacity: 0;
+    --categoryCardImagesGradientOpacity: 0;
 
     color: var(--color-white);
     border-color: currentColor;
+  }
+
+  &:focus-visible {
+    outline-offset: -2px;
   }
 
   &__images {
@@ -28,25 +32,25 @@
     &::after {
       @include abs-cover;
 
-      content: "";
-      opacity: var(--categoryCardImgOpacity);
-      transition-duration: var(--transition-duration);
+      content: '';
       background-image: linear-gradient(180deg, rgba(26, 26, 26, 0.00) 0%, var(--color-black-10) 101.79%);
+      opacity: var(--categoryCardImagesGradientOpacity);
+      transition-duration: var(--transition-duration);
     }
   }
 
   &__image {
     width: 100%;
-    height: fluid(124,68);
+    height: fluid(124, 68);
     object-fit: cover;
     border-radius: var(--border-radius-m);
 
-    @include laptop{
+    @include laptop {
       border-radius: var(--border-radius-xs);
     }
   }
 
-  &__body{
+  &__body {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -58,9 +62,9 @@
     font-weight: 600;
   }
 
-  &__icon{
+  &__icon {
     &.icon {
-      --iconSize: #{fluid(30,20)};
+      --iconSize: #{fluid(30, 20)};
     }
   }
 }
