--- a/src/styles/helpers/media.scss
+++ b/src/styles/helpers/media.scss
@@ -1,6 +1,6 @@
-$laptop: 1440px;
-$tablet: 1023px;
-$mobile: 767px;
+$laptop:   1440px;
+$tablet:   1023px;
+$mobile:   767px;
 $mobile-s: 480px;
 
 @mixin laptop-above {
@@ -45,7 +45,7 @@ $mobile-s: 480px;
   }
 }
 
-@mixin laptop-above {
+@mixin mobile-s {
   @media (width <= $mobile-s) {
     @content;
   }
